--- a/arch/arm64/boot/Makefile
+++ b/arch/arm64/boot/Makefile
@@ -27,7 +27,7 @@ endif
 DTB_OBJS := $(addprefix $(obj)/dts/,$(DTB_LIST))
 targets += $(addprefix dts/,$(DTB_LIST))
 
-$(obj)/Image: vmlinux $(obj)/mtk.dtb FORCE
+$(obj)/Image: vmlinux FORCE
 	$(call if_changed,objcopy)
 
 $(obj)/Image.bz2: $(obj)/Image FORCE
@@ -49,9 +49,6 @@ $(obj)/Image.lzo: $(obj)/Image FORCE
 	$(call if_changed,lzo)
 
 $(obj)/Image.gz-dtb: $(obj)/Image.gz $(DTB_OBJS) FORCE
-	$(call if_changed,cat)
-
-$(obj)/mtk.dtb: $(DTB_OBJS) FORCE
 	$(call if_changed,cat)
 
 install: $(obj)/Image
